[package]
name = "nws-weather"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "nws-weather"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
